--- a/HelpDesk/Views/Shared/_Layout.cshtml
+++ b/HelpDesk/Views/Shared/_Layout.cshtml
@@ -180,7 +180,7 @@
             <!-- Brand Logo -->
             <a href="index3.html" class="brand-link">
                 <img src="~/AdminLTE/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-                <span class="brand-text font-weight-light">AdminLTE 3</span>
+                <span class="brand-text font-weight-light"> Help Desk </span>
             </a>
 
             <!-- Sidebar -->
@@ -190,9 +190,7 @@
                     <div class="image">
                         <img src="~/AdminLTE/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
                     </div>
-                    <div class="info">
-                        <a href="#" class="d-block">Alexander Pierce</a>
-                    </div>
+                  
                 </div>
 
 
@@ -273,137 +271,7 @@
 
 
 
-                       @*  <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-table"></i>
-                                <p>
-                                    Leave Applications
-                                    <i class="fas fa-angle-left right"></i>
-                                </p>
-                            </a>
-                            <ul class="nav nav-treeview">
-                                <li class="nav-item">
-                                    <a asp-action="Index" asp-controller="LeaveTypes" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Leave Types</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a asp-action="Index" asp-controller="LeaveApplications" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Leave Applications</p>
-                                    </a>
-                                    <a asp-action="ApprovedLeaveApplications" asp-controller="LeaveApplications" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Approved Leave Applications</p>
-                                    </a>
-                                    <a asp-action="RejectedLeaveApplications" asp-controller="LeaveApplications" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Rejected Leave Applications</p>
-                                    </a>
-                                </li>
-                            </ul> *@
-                       @*  <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-table"></i>
-                                <p>
-                                    System Security
-                                    <i class="fas fa-angle-left right"></i>
-                                </p>
-                            </a>
-
-                            <ul class="nav nav-treeview">
-                                <li class="nav-item">
-                                    <a asp-action="Index" asp-controller="Users" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>System Users</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a asp-action="Index" asp-controller="Roles" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p> System Roles</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a asp-action="Index" asp-controller="SystemProfiles" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>System Profiles </p>
-                                    </a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a asp-action="Index" asp-controller="Audits" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>System Audit Logs </p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a asp-action="Index" asp-controller="Profiles" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>User Roles </p>
-                                    </a>
-                                </li>
-
-                            </ul>
-                        </li>
-
-
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-table"></i>
-                                <p>
-                                    System Administration
-                                    <i class="fas fa-angle-left right"></i>
-                                </p>
-                            </a>
-
-                            <ul class="nav nav-treeview">
-                                <li class="nav-item">
-                                    <a asp-action="Index" asp-controller="Designations" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Designations</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a asp-action="Index" asp-controller="Departments" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Departments</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a asp-action="Index" asp-controller="Banks" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Banks</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a asp-action="Index" asp-controller="Countries" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Countries</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a asp-action="Index" asp-controller="Cities" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Towns/CIties</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a asp-action="Index" asp-controller="SystemCodes" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>System Code</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a asp-action="Index" asp-controller="SystemCodeDetails" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>System Code Details</p>
-                                    </a>
-                                </li>
-
-                            </ul> *@
-
+                   
                     </ul>
 
                 </nav>
@@ -412,8 +280,36 @@
             <!-- /.sidebar -->
         </aside>
 
+
         <!-- Content Wrapper. Contains page content -->
-        <div class="content-wrapper">
+        <!--start content-->
+        <main class="content-wrapper">
+            <section class="content">
+            <div class="container-fluid">
+                @if (TempData["MESSAGE"] != null)
+                {
+                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        <i class="icon fas fa-check"></i> @TempData["MESSAGE"]
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                }
+                @if (TempData["Error"] != null)
+                {
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        <i class="icon fas fa-times"></i> @TempData["Error"]
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                }
+                    @RenderBody()
+            </div>
+            </section>
+        </main>
+
+       @*  <div class="content-wrapper">
             <!-- Main content -->
             <section class="content">
                 <div class="container-fluid">
@@ -423,7 +319,7 @@
                 </div><!-- /.container-fluid -->
             </section>
             <!-- /.content -->
-        </div>
+        </div> *@
         <!-- /.content-wrapper -->
         <footer class="main-footer">
             <strong>Copyright &copy @DateTime.Now.Year <a href=""> Designed and Developed by Michelle</a>.</strong>
