--- a/HelpDesk/Views/Tickets/Delete.cshtml
+++ b/HelpDesk/Views/Tickets/Delete.cshtml
@@ -1,65 +1,68 @@
-﻿@model HelpDesk.Models.Ticket
+﻿    @model HelpDesk.Models.Ticket
 
-@{
-    ViewData["Title"] = "Delete";
-}
-
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Ticket</h4>
-    <hr />
-    <div class="row">
-        <table class="table">
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Title)
-                </th>
-                <td>
-                    @Html.DisplayFor(model => model.Title)
-                </td>
-                <th>
-                    @Html.DisplayNameFor(model => model.Description)
-                </th>
-                <td>
-                    @Html.DisplayFor(model => model.Description)
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Status)
-                </th>
-                <td>
-                    @Html.DisplayFor(model => model.Status)
-                </td>
-                <th>
-                    @Html.DisplayNameFor(model => model.Priority)
-                </th>
-                <td>
-                    @Html.DisplayFor(model => model.Priority)
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.CreatedBy)
-                </th>
-                <td>
-                    @Html.DisplayFor(model => model.CreatedBy.FullName)
-                </td>
-                <th>
-                    @Html.DisplayNameFor(model => model.CreatedOn)
-                </th>
-                <td>
-                    @Html.DisplayFor(model => model.CreatedOn)
-                </td>
-            </tr>
-        </table>
-    </div>
+    @{
+        ViewData["Title"] = "Delete";
+    }
+    <div class="card rounded-4">
+        <div class="card-body">
+            <div class="d-flex align-items-center">
+                <h6 class="mb-0">Delete Ticket</h6>
+            </div>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <hr />
+        <div class="row">
+                <table class="table table-bordered table-hover table-responsive-lg">
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Title)
+                    </th>
+                    <td>
+                        @Html.DisplayFor(model => model.Title)
+                    </td>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Description)
+                    </th>
+                    <td>
+                        @Html.DisplayFor(model => model.Description)
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Status)
+                    </th>
+                    <td>
+                        @Html.DisplayFor(model => model.Status)
+                    </td>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Priority)
+                    </th>
+                    <td>
+                        @Html.DisplayFor(model => model.Priority)
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CreatedBy)
+                    </th>
+                    <td>
+                        @Html.DisplayFor(model => model.CreatedBy.FullName)
+                    </td>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CreatedOn)
+                    </th>
+                    <td>
+                        @Html.DisplayFor(model => model.CreatedOn)
+                    </td>
+                </tr>
+            </table>
+        </div>
+        </div>
+        </div>
     
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a class="btn btn-warning" asp-action="Index">Back to List</a>
-    </form>
-</div>
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            <a class="btn btn-warning" asp-action="Index">Back to List</a>
+        </form>
+    </div>
