--- a/HelpDesk/Views/Tickets/Details.cshtml
+++ b/HelpDesk/Views/Tickets/Details.cshtml
@@ -35,7 +35,7 @@
     </div>
 </div>
 
-<div class="row">
-    <a class="btn btn-warning" asp-action="Edit" asp-route-id="@Model?.Id">Edit</a>
+<div>
+    <a class="btn btn-warning" asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a class="btn btn-primary" asp-action="Index">Back to List</a>
 </div>
