--- a/HelpDesk/Views/Tickets/Edit.cshtml
+++ b/HelpDesk/Views/Tickets/Edit.cshtml
@@ -7,7 +7,7 @@
     <div class="card rounded-4">
         <div class="card-body">
             <div class="d-flex align-items-center">
-                <h6 class="mb-0">Update Tickets</h6>
+                <h6 class="mb-0">Update Ticket</h6>
             </div>
     <hr />
     <div class="row">
