--- a/HelpDesk/Views/Shared/_Layout.cshtml
+++ b/HelpDesk/Views/Shared/_Layout.cshtml
@@ -192,7 +192,7 @@
                     </div>
                   
                 </div>
-
+              
 
 
 
@@ -236,6 +236,16 @@
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
                                     Ticket Comments
+
+                                </p>
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a asp-controller="TicketCategories" asp-action="Index" class="nav-link">
+                                <i class="nav-icon fas fa-th"></i>
+                                <p>
+                                    Ticket Categories
 
                                 </p>
                             </a>
