--- a/HelpDesk/Views/Shared/_Layout.cshtml
+++ b/HelpDesk/Views/Shared/_Layout.cshtml
@@ -190,8 +190,11 @@
                     <div class="image">
                         <img src="~/AdminLTE/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
                     </div>
-                  
+                    <div class="info">
+                        <p class="user-name mb-0" style="color: white;">@User.Identity?.Name!</p>
+                    </div>
                 </div>
+
               
 
 
