--- a/HelpDesk/Views/TicketCategories/Details.cshtml
+++ b/HelpDesk/Views/TicketCategories/Details.cshtml
@@ -4,51 +4,44 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<div class="card rounded-4">
+    <div class="card-body">
+        <div class="d-flex align-items-center">
+            <h6 class="mb-0">Ticket Categories Details</h6>
+        </div>
+        <hr />
+        <div class="row">
+            <table class="table table-bordered table-hover table-responsive-lg">
+                <tr>
+                    <th class="col-sm-2">@Html.DisplayNameFor(model => model.Code)</th>
+                    <td class="col-sm-10">@Html.DisplayFor(model => model.Code)</td>
+                </tr>
+                <tr>
+                    <th class="col-sm-2">@Html.DisplayNameFor(model => model.Name)</th>
+                    <td class="col-sm-10">@Html.DisplayFor(model => model.Name)</td>
+                </tr>
+                <tr>
+                    <th class="col-sm-2">@Html.DisplayNameFor(model => model.CreatedBy)</th>
+                    <td class="col-sm-10">@Html.DisplayFor(model => model.CreatedBy.Id)</td>
+                </tr>
+                <tr>
+                    <th class="col-sm-2">@Html.DisplayNameFor(model => model.CreatedOn)</th>
+                    <td class="col-sm-10">@Html.DisplayFor(model => model.CreatedOn)</td>
+                </tr>
+                <tr>
+                    <th class="col-sm-2">@Html.DisplayNameFor(model => model.ModifiedBy)</th>
+                    <td class="col-sm-10">@Html.DisplayFor(model => model.ModifiedBy.Id)</td>
+                </tr>
+                <tr>
+                    <th class="col-sm-2">@Html.DisplayNameFor(model => model.ModifiedOn)</th>
+                    <td class="col-sm-10">@Html.DisplayFor(model => model.ModifiedOn)</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</div>
 
 <div>
-    <h4>TicketCategory</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Code)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Code)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedBy.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedOn)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedOn)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ModifiedBy)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ModifiedBy.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ModifiedOn)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ModifiedOn)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a>
+    <a asp-action="Index" class="btn btn-secondary ms-2">Back to List</a>
 </div>
