--- a/HelpDesk/Views/TicketSubCategories/Create.cshtml
+++ b/HelpDesk/Views/TicketSubCategories/Create.cshtml
@@ -1,21 +1,26 @@
-﻿    @model HelpDesk.Models.TicketCategory
+﻿    @model HelpDesk.Models.TicketSubCategory
 
     @{
-        ViewData["Title"] = "Edit";
+        ViewData["Title"] = "Create";
     }
 
     <div class="card rounded-4">
         <div class="card-body">
             <div class="d-flex align-items-center">
-                <h6 class="mb-0">Update Ticket Category</h6>
+                <h6 class="mb-0">Add New Ticket Sub Category</h6>
             </div>
             <hr />
             <div class="row">
                 <div class="col-md-12">
-            <form asp-action="Edit">
+            <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input type="hidden" asp-for="Id" />
                 <div class="row">
+                <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="CategoryId" class="control-label"></label>
+                    <select asp-for="CategoryId" class ="form-control" asp-items="ViewBag.CategoryId"></select>
+                </div>
+                </div>
                 <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="Code" class="control-label"></label>
@@ -23,7 +28,7 @@
                     <span asp-validation-for="Code" class="text-danger"></span>
                 </div>
                 </div>
-                <div class="col-md-6">
+               <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="Name" class="control-label"></label>
                     <input asp-for="Name" class="form-control" />
@@ -33,8 +38,7 @@
                 <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="CreatedById" class="control-label"></label>
-                    <select asp-for="CreatedById" class="form-control" asp-items="ViewBag.CreatedById"></select>
-                    <span asp-validation-for="CreatedById" class="text-danger"></span>
+                    <select asp-for="CreatedById" class ="form-control" asp-items="ViewBag.CreatedById"></select>
                 </div>
                 </div>
                 <div class="col-md-6">
@@ -47,8 +51,7 @@
                 <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="ModifiedById" class="control-label"></label>
-                    <select asp-for="ModifiedById" class="form-control" asp-items="ViewBag.ModifiedById"></select>
-                    <span asp-validation-for="ModifiedById" class="text-danger"></span>
+                    <select asp-for="ModifiedById" class ="form-control" asp-items="ViewBag.ModifiedById"></select>
                 </div>
                 </div>
                 <div class="col-md-6">
@@ -60,7 +63,7 @@
                 </div>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-primary" />
+                    <input type="submit" value="Create" class="btn btn-primary" />
                 </div>
             </form>
         </div>
