--- a/HelpDesk/Views/TicketSubCategories/Delete.cshtml
+++ b/HelpDesk/Views/TicketSubCategories/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model HelpDesk.Models.TicketCategory
+﻿@model HelpDesk.Models.TicketSubCategory
 
 @{
     ViewData["Title"] = "Delete";
@@ -7,12 +7,16 @@
 <div class="card rounded-4">
     <div class="card-body">
         <div class="d-flex align-items-center">
-            <h6 class="mb-0">Delete Ticket Category</h6>
+            <h6 class="mb-0">Delete Ticket Subcategory</h6>
         </div>
         <h3 class="text-danger">Are you sure you want to delete this?</h3>
         <hr />
 
         <table class="table table-bordered table-hover">
+            <tr>
+                <th class="col-sm-2">@Html.DisplayNameFor(model => model.Category)</th>
+                <td class="col-sm-10">@Html.DisplayFor(model => model.Category.Id)</td>
+            </tr>
             <tr>
                 <th class="col-sm-2">@Html.DisplayNameFor(model => model.Code)</th>
                 <td class="col-sm-10">@Html.DisplayFor(model => model.Code)</td>
