--- a/HelpDesk/Views/TicketSubCategories/Details.cshtml
+++ b/HelpDesk/Views/TicketSubCategories/Details.cshtml
@@ -1,18 +1,21 @@
-﻿@model HelpDesk.Models.TicketCategory
+﻿@model HelpDesk.Models.TicketSubCategory
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
 }
 
 <div class="card rounded-4">
     <div class="card-body">
         <div class="d-flex align-items-center">
-            <h6 class="mb-0">Delete Ticket Category</h6>
+            <h6 class="mb-0">Ticket Subcategory Details</h6>
         </div>
-        <h3 class="text-danger">Are you sure you want to delete this?</h3>
         <hr />
 
-        <table class="table table-bordered table-hover">
+        <table class="table table-bordered table-hover table-responsive-lg">
+            <tr>
+                <th class="col-sm-2">@Html.DisplayNameFor(model => model.Category)</th>
+                <td class="col-sm-10">@Html.DisplayFor(model => model.Category.Id)</td>
+            </tr>
             <tr>
                 <th class="col-sm-2">@Html.DisplayNameFor(model => model.Code)</th>
                 <td class="col-sm-10">@Html.DisplayFor(model => model.Code)</td>
@@ -39,10 +42,9 @@
             </tr>
         </table>
 
-        <form asp-action="Delete" method="post" class="mt-3">
-            <input type="hidden" asp-for="Id" />
-            <input type="submit" value="Delete" class="btn btn-danger" />
+        <div class="mt-3">
+            <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a>
             <a asp-action="Index" class="btn btn-secondary ms-2">Back to List</a>
-        </form>
+        </div>
     </div>
 </div>
