--- a/HelpDesk/Views/Shared/_Layout.cshtml
+++ b/HelpDesk/Views/Shared/_Layout.cshtml
@@ -255,6 +255,16 @@
                         </li>
 
                         <li class="nav-item">
+                            <a asp-controller="TicketSubCategories" asp-action="SubCategories" class="nav-link">
+                                <i class="nav-icon fas fa-th"></i>
+                                <p>
+                                    Ticket Sub-Categories
+
+                                </p>
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
                             <a asp-controller="AuditTrails" asp-action="Index" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
