--- a/HelpDesk/Views/TicketSubCategories/Create.cshtml
+++ b/HelpDesk/Views/TicketSubCategories/Create.cshtml
@@ -7,7 +7,7 @@
     <div class="card rounded-4">
         <div class="card-body">
             <div class="d-flex align-items-center">
-                <h6 class="mb-0">Add New Ticket Sub Category</h6>
+                <h6 class="mb-0">Add New Ticket Subcategory</h6>
             </div>
             <hr />
             <div class="row">
@@ -15,12 +15,6 @@
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="row">
-                <div class="col-md-6">
-                <div class="form-group">
-                    <label asp-for="CategoryId" class="control-label"></label>
-                    <select asp-for="CategoryId" class ="form-control" asp-items="ViewBag.CategoryId"></select>
-                </div>
-                </div>
                 <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="Code" class="control-label"></label>
@@ -35,32 +29,7 @@
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 </div>
-                <div class="col-md-6">
-                <div class="form-group">
-                    <label asp-for="CreatedById" class="control-label"></label>
-                    <select asp-for="CreatedById" class ="form-control" asp-items="ViewBag.CreatedById"></select>
-                </div>
-                </div>
-                <div class="col-md-6">
-                <div class="form-group">
-                    <label asp-for="CreatedOn" class="control-label"></label>
-                    <input asp-for="CreatedOn" class="form-control" />
-                    <span asp-validation-for="CreatedOn" class="text-danger"></span>
-                </div>
-                </div>
-                <div class="col-md-6">
-                <div class="form-group">
-                    <label asp-for="ModifiedById" class="control-label"></label>
-                    <select asp-for="ModifiedById" class ="form-control" asp-items="ViewBag.ModifiedById"></select>
-                </div>
-                </div>
-                <div class="col-md-6">
-                <div class="form-group">
-                    <label asp-for="ModifiedOn" class="control-label"></label>
-                    <input asp-for="ModifiedOn" class="form-control" />
-                    <span asp-validation-for="ModifiedOn" class="text-danger"></span>
-                </div>
-                </div>
+               
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Create" class="btn btn-primary" />
