--- a/HelpDesk/Views/TicketSubCategories/Index.cshtml
+++ b/HelpDesk/Views/TicketSubCategories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<HelpDesk.Models.TicketSubCategory>
+﻿@model HelpDesk.ViewModels.TicketSubCategoriesVM;
 
 @{
     ViewData["Title"] = "Index";
@@ -11,7 +11,7 @@
         </div>
 
         <p>
-            <a asp-action="Create" class="btn btn-primary ">Add New  Ticket Sub Category</a>
+            <a asp-action="Create" asp-route-id="@Model.CategoryId" class="btn btn-primary ">Add New  Ticket Sub Category</a>
         </p>
         <table class="table table-hover table-bordered table-striped">
             <thead>
@@ -38,10 +38,10 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var item in Model.TicketSubCategories) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Category.Id)
+                @Html.DisplayFor(modelItem => item.Category.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Code)
