--- a/HelpDesk/Views/Tickets/Create.cshtml
+++ b/HelpDesk/Views/Tickets/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model HelpDesk.Models.Ticket
+﻿@model HelpDesk.ViewModels.TicketViewModel
 
 @{
      ViewData["Title"] = "Create";
@@ -42,6 +42,23 @@
                                 <span asp-validation-for="Priority" class="text-danger"></span>
                             </div>
                             </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label asp-for="CategoryId" class="control-label"></label>
+                                <select asp-for="CategoryId" id="CategoryId" name="CategoryId" class="form-control get-subcategories" asp-items="ViewBag.CategoryId">
+                                    <option value=" "> Select Category</option>
+                                </select>
+                            
+                            </div>
+                        </div>
+                            <div class="col-md-6">
+                            <div class="form-group">
+                                <label asp-for="SubCategoryId" class="control-label"></label>
+                                <select asp-for="SubCategoryId" id="SubCategoryId" name="SubCategoryId" class="form-control">
+                                    <option value=" ">Select Sub-Category</option>
+                                </select>
+                            </div>
+                           </div>
                
                             </div>
                             <div class="form-group">
