--- a/HelpDesk/Views/Tickets/Index.cshtml
+++ b/HelpDesk/Views/Tickets/Index.cshtml
@@ -32,6 +32,9 @@
                     @Html.DisplayNameFor(model => model.Priority)
                 </th>
                 <th>
+                        @Html.DisplayNameFor(model => model.SubCategoryId)
+                </th>
+                <th>
                     @Html.DisplayNameFor(model => model.CreatedBy)
                 </th>
                 <th>
@@ -60,6 +63,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Priority)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SubCategory.Name)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.CreatedBy.FullName)
