--- a/HelpDesk/Views/Tickets/Delete.cshtml
+++ b/HelpDesk/Views/Tickets/Delete.cshtml
@@ -29,16 +29,16 @@
                 </tr>
                 <tr>
                     <th>
-                        @Html.DisplayNameFor(model => model.Status)
+                        @Html.DisplayNameFor(model => model.StatusId)
                     </th>
                     <td>
-                        @Html.DisplayFor(model => model.Status)
+                        @Html.DisplayFor(model => model.StatusId)
                     </td>
                     <th>
-                        @Html.DisplayNameFor(model => model.Priority)
+                        @Html.DisplayNameFor(model => model.PriorityId)
                     </th>
                     <td>
-                        @Html.DisplayFor(model => model.Priority)
+                        @Html.DisplayFor(model => model.PriorityId)
                     </td>
                 </tr>
                 <tr>
