--- a/HelpDesk/Views/Tickets/Details.cshtml
+++ b/HelpDesk/Views/Tickets/Details.cshtml
@@ -19,10 +19,10 @@
                     <td>@Html.DisplayFor(model => model.Description)</td>
                 </tr>
                 <tr>
-                    <th>@Html.DisplayNameFor(model => model.Status)</th>
-                    <td>@Html.DisplayFor(model => model.Status)</td>
-                    <th>@Html.DisplayNameFor(model => model.Priority)</th>
-                    <td>@Html.DisplayFor(model => model.Priority)</td>
+                    <th>@Html.DisplayNameFor(model => model.StatusId)</th>
+                    <td>@Html.DisplayFor(model => model.StatusId)</td>
+                    <th>@Html.DisplayNameFor(model => model.PriorityId)</th>
+                    <td>@Html.DisplayFor(model => model.PriorityId)</td>
                 </tr>
                 <tr>
                     <th>@Html.DisplayNameFor(model => model.CreatedBy)</th>
