--- a/HelpDesk/Views/Tickets/Index.cshtml
+++ b/HelpDesk/Views/Tickets/Index.cshtml
@@ -26,10 +26,10 @@
                     @Html.DisplayNameFor(model => model.Description)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Status)
+                    @Html.DisplayNameFor(model => model.StatusId)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Priority)
+                    @Html.DisplayNameFor(model => model.PriorityId)
                 </th>
                 <th>
                         @Html.DisplayNameFor(model => model.SubCategoryId)
@@ -59,10 +59,10 @@
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Status)
+                    @Html.DisplayFor(modelItem => item.StatusId)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Priority)
+                    @Html.DisplayFor(modelItem => item.PriorityId)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.SubCategory.Name)
