--- a/HelpDesk/Views/Tickets/Create.cshtml
+++ b/HelpDesk/Views/Tickets/Create.cshtml
@@ -28,21 +28,17 @@
                                 <span asp-validation-for="Description" class="text-danger"></span>
                             </div>
                             </div>
-                            <div class="col-md-6">
+
+                             <div class="col-md-6">
                             <div class="form-group">
-                                <label asp-for="Status" class="control-label"></label>
-                                <input asp-for="Status" class="form-control" />
-                                <span asp-validation-for="Status" class="text-danger"></span>
+                                <label asp-for="PriorityId" class="control-label"></label>
+                                <select asp-for="PriorityId" id="PriorityId" name="PriorityId" class="form-control " asp-items="ViewBag.PriorityId">
+                                    <option value=" "> Select Priority</option>
+                                </select>
+
                             </div>
                             </div>
                             <div class="col-md-6">
-                            <div class="form-group">
-                                <label asp-for="Priority" class="control-label"></label>
-                                <input asp-for="Priority" class="form-control" />
-                                <span asp-validation-for="Priority" class="text-danger"></span>
-                            </div>
-                            </div>
-                        <div class="col-md-6">
                             <div class="form-group">
                                 <label asp-for="CategoryId" class="control-label"></label>
                                 <select asp-for="CategoryId" id="CategoryId" name="CategoryId" class="form-control get-subcategories" asp-items="ViewBag.CategoryId">
@@ -50,7 +46,7 @@
                                 </select>
                             
                             </div>
-                        </div>
+                            </div>
                             <div class="col-md-6">
                             <div class="form-group">
                                 <label asp-for="SubCategoryId" class="control-label"></label>
