--- a/HelpDesk/Views/Tickets/Details.cshtml
+++ b/HelpDesk/Views/Tickets/Details.cshtml
@@ -20,15 +20,21 @@
                 </tr>
                 <tr>
                     <th>@Html.DisplayNameFor(model => model.StatusId)</th>
-                    <td>@Html.DisplayFor(model => model.StatusId)</td>
+                    <td>@Html.DisplayFor(model => model.Status.Description)</td>
                     <th>@Html.DisplayNameFor(model => model.PriorityId)</th>
-                    <td>@Html.DisplayFor(model => model.PriorityId)</td>
+                    <td>@Html.DisplayFor(model => model.Priority.Description)</td>
                 </tr>
                 <tr>
                     <th>@Html.DisplayNameFor(model => model.CreatedBy)</th>
                     <td>@Html.DisplayFor(model => model.CreatedBy.FullName)</td>
                     <th>@Html.DisplayNameFor(model => model.CreatedOn)</th>
                     <td>@Html.DisplayFor(model => model.CreatedOn)</td>
+                </tr>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.Attachment)</th>
+                    <td>@Html.DisplayFor(model => model.Attachment)</td>
+                    <th>@Html.DisplayNameFor(model => model.SubCategoryId)</th>
+                    <td>@Html.DisplayFor(model => model.SubCategory.Name)</td>
                 </tr>
             </table>
         </div>
