--- a/HelpDesk/Views/Tickets/Create.cshtml
+++ b/HelpDesk/Views/Tickets/Create.cshtml
@@ -11,7 +11,7 @@
                 <hr />
                 <div class="row">
                     <div class="col-md-12">
-                        <form asp-action="Create">
+                        <form asp-action="Create" method="post" enctype="multipart/form-data">
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <div class="row">
                             <div class="col-md-6">
@@ -55,6 +55,13 @@
                                 </select>
                             </div>
                            </div>
+
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label asp-for="Attachment" class="control-label"></label>
+                                <input  class="form-control" type="file" accept=".png,.jpg,.jpeg,.pdf,.doc" id="attachment" name="attachment"/>
+                            </div>
+                        </div>
                
                             </div>
                             <div class="form-group">
@@ -70,5 +77,8 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    <script src="~/CustomJs/TicketSystem.js"></script>
 }
