--- a/HelpDesk/Views/Users/Index.cshtml
+++ b/HelpDesk/Views/Users/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="card rounded-4">
     <div class="card-body">
         <div class="d-flex align-items-center">
-            <h6 class="mb-0">Add New User</h6>
+            <h6 class="mb-0">System Users</h6>
         </div>
 <p>
     <a asp-action="Create" class="btn btn-primary ">Add New User</a>
