--- a/HelpDesk/Views/Shared/_Layout.cshtml
+++ b/HelpDesk/Views/Shared/_Layout.cshtml
@@ -300,6 +300,24 @@
                                 </p>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a asp-controller="Roles" asp-action="Index" class="nav-link">
+                                <i class="nav-icon fas fa-th"></i>
+                                <p>
+                                    System Roles
+
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a asp-controller="Departments" asp-action="Index" class="nav-link">
+                                <i class="nav-icon fas fa-th"></i>
+                                <p>
+                                    Departments
+
+                                </p>
+                            </a>
+                        </li>
 
                         <li class="nav-item">
                             <a asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index")" class="nav-link">
