--- a/HelpDesk/Views/Comments/Index.cshtml
+++ b/HelpDesk/Views/Comments/Index.cshtml
@@ -40,7 +40,7 @@
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Ticket.Id)
+                    @Html.DisplayFor(modelItem => item.Ticket.Title)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.CreatedOn)
