--- a/HelpDesk/Views/Tickets/Details.cshtml
+++ b/HelpDesk/Views/Tickets/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model HelpDesk.Models.Ticket
+﻿@model HelpDesk.ViewModels.TicketViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -11,37 +11,89 @@
         </div>
         <hr />
         <div class="row">
+            <div class="col-md-6">
+                <h4>Ticket Details</h4>
             <table class="table table-bordered table-hover table-responsive-lg">
                 <tr>
-                    <th>@Html.DisplayNameFor(model => model.Title)</th>
-                    <td>@Html.DisplayFor(model => model.Title)</td>
-                    <th>@Html.DisplayNameFor(model => model.Description)</th>
-                    <td>@Html.DisplayFor(model => model.Description)</td>
+                    <th style="background:springgreen">@Html.DisplayNameFor(model => model.Title)</th>
+                    <td>@Html.DisplayFor(model => model.TicketDetails.Title)</td>
                 </tr>
                 <tr>
-                    <th>@Html.DisplayNameFor(model => model.StatusId)</th>
-                    <td>@Html.DisplayFor(model => model.Status.Description)</td>
-                    <th>@Html.DisplayNameFor(model => model.PriorityId)</th>
-                    <td>@Html.DisplayFor(model => model.Priority.Description)</td>
+                    <th style="background:springgreen">@Html.DisplayNameFor(model => model.Description)</th>
+                    <td>@Html.DisplayFor(model => model.TicketDetails.Description)</td>
                 </tr>
                 <tr>
-                    <th>@Html.DisplayNameFor(model => model.CreatedBy)</th>
-                    <td>@Html.DisplayFor(model => model.CreatedBy.FullName)</td>
-                    <th>@Html.DisplayNameFor(model => model.CreatedOn)</th>
-                    <td>@Html.DisplayFor(model => model.CreatedOn)</td>
+                    <th style ="background:springgreen">@Html.DisplayNameFor(model => model.StatusId)</th>
+                    <td>@Html.DisplayFor(model => model.TicketDetails.Status.Description)</td>
                 </tr>
                 <tr>
-                    <th>@Html.DisplayNameFor(model => model.Attachment)</th>
-                    <td>@Html.DisplayFor(model => model.Attachment)</td>
-                    <th>@Html.DisplayNameFor(model => model.SubCategoryId)</th>
-                    <td>@Html.DisplayFor(model => model.SubCategory.Name)</td>
+                    <th style="background:springgreen">@Html.DisplayNameFor(model => model.PriorityId)</th>
+                    <td>@Html.DisplayFor(model => model.TicketDetails.Priority.Description)</td>
+                </tr>
+                <tr>
+                      
+                    <th style="background:springgreen">@Html.DisplayNameFor(model => model.CreatedBy)</th>
+                    <td>@Html.DisplayFor(model => model.TicketDetails.CreatedBy.FullName)</td>
+                </tr>
+                <tr>
+                    <th style="background:springgreen">@Html.DisplayNameFor(model => model.CreatedOn)</th>
+                    <td>@Html.DisplayFor(model => model.TicketDetails.CreatedOn)</td>
+                </tr>
+                <tr>
+                    <th style="background:springgreen">@Html.DisplayNameFor(model => model.Attachment)</th>
+                    <td>@Html.DisplayFor(model => model.TicketDetails.Attachment)</td>
+                </tr>
+                <tr>
+                    <th style="background:springgreen">@Html.DisplayNameFor(model => model.SubCategoryId)</th>
+                    <td>@Html.DisplayFor(model => model.TicketDetails.SubCategory.Name)</td>
                 </tr>
             </table>
+            </div>
+
+            <div class="col-md-6">
+                <h4>Ticket Comments</h4>
+                <table class="table table-bordered table-hover table-responsive-lg">
+
+                    <thead style="background:springgreen">
+                    <tr>
+                        <th>
+                            @Html.DisplayNameFor(model => model.TicketComment.Description)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.TicketComment.CreatedOn)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.TicketComment.CreatedBy)
+                        </th>
+
+                    </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model.TicketComments)
+                        {
+                            <tr>
+                               
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Description)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.CreatedOn)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.CreatedBy.FullName)
+                                </td>
+                            </tr>
+                       
+                        }
+                    </tbody>
+                   
+                </table>
+            </div>
         </div>
     </div>
 </div>
 
 <div>
-    <a class="btn btn-warning" asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+
     <a class="btn btn-primary" asp-action="Index">Back to List</a>
 </div>
