--- a/HelpDesk/Views/Home/Index.cshtml
+++ b/HelpDesk/Views/Home/Index.cshtml
@@ -97,10 +97,10 @@
                         <th>
                             @Html.DisplayNameFor(model => model.CreatedOn)
                         </th>
+                        <th>No Of Comments</th>
                         <th>Comments</th>
                         <th>View</th>
                         <th>Edit</th>
-                        <th>Delete</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -128,7 +128,9 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.CreatedOn)
                             </td>
-
+                            <td style="text-align:center">
+                                <a asp-action="TicketsComments" asp-controller="Comments" asp-route-id="@item.Id">  @item.TicketComments.Count() </a>
+                            </td>
                             <td>
 
                                 <a class="btn btn-secondary" asp-action="TicketsComments" asp-controller="Comments" asp-route-id="@item.Id">Comments</a>
@@ -140,10 +142,6 @@
                             </td>
                             <td>
                                 <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-
-                            </td>
-                            <td>
-                                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
 
                             </td>
                         </tr>
