--- a/HelpDesk/Views/Tickets/Details.cshtml
+++ b/HelpDesk/Views/Tickets/Details.cshtml
@@ -1,99 +1,89 @@
 ﻿@model HelpDesk.ViewModels.TicketViewModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Ticket Details";
 }
 
 <div class="card rounded-4">
     <div class="card-body">
-        <div class="d-flex align-items-center">
+        <div class="d-flex align-items-center mb-3">
             <h6 class="mb-0">Ticket Details</h6>
         </div>
         <hr />
         <div class="row">
             <div class="col-md-6">
-                <h4>Ticket Details</h4>
-            <table class="table table-bordered table-hover table-responsive-lg">
-                <tr>
-                    <th style="background:springgreen">@Html.DisplayNameFor(model => model.Title)</th>
-                    <td>@Html.DisplayFor(model => model.TicketDetails.Title)</td>
-                </tr>
-                <tr>
-                    <th style="background:springgreen">@Html.DisplayNameFor(model => model.Description)</th>
-                    <td>@Html.DisplayFor(model => model.TicketDetails.Description)</td>
-                </tr>
-                <tr>
-                    <th style ="background:springgreen">@Html.DisplayNameFor(model => model.StatusId)</th>
-                    <td>@Html.DisplayFor(model => model.TicketDetails.Status.Description)</td>
-                </tr>
-                <tr>
-                    <th style="background:springgreen">@Html.DisplayNameFor(model => model.PriorityId)</th>
-                    <td>@Html.DisplayFor(model => model.TicketDetails.Priority.Description)</td>
-                </tr>
-                <tr>
-                      
-                    <th style="background:springgreen">@Html.DisplayNameFor(model => model.CreatedBy)</th>
-                    <td>@Html.DisplayFor(model => model.TicketDetails.CreatedBy.FullName)</td>
-                </tr>
-                <tr>
-                    <th style="background:springgreen">@Html.DisplayNameFor(model => model.CreatedOn)</th>
-                    <td>@Html.DisplayFor(model => model.TicketDetails.CreatedOn)</td>
-                </tr>
-                <tr>
-                    <th style="background:springgreen">@Html.DisplayNameFor(model => model.Attachment)</th>
-                    <td>@Html.DisplayFor(model => model.TicketDetails.Attachment)</td>
-                </tr>
-                <tr>
-                    <th style="background:springgreen">@Html.DisplayNameFor(model => model.SubCategoryId)</th>
-                    <td>@Html.DisplayFor(model => model.TicketDetails.SubCategory.Name)</td>
-                </tr>
-            </table>
+                <h4>Ticket Information</h4>
+                <table class="table table-bordered table-hover">
+                    <tr>
+                        <th style="background:springgreen">@Html.DisplayNameFor(model => model.Title)</th>
+                        <td>@Html.DisplayFor(model => model.TicketDetails.Title)</td>
+                    </tr>
+                    <tr>
+                        <th style="background:springgreen">@Html.DisplayNameFor(model => model.Description)</th>
+                        <td>@Html.DisplayFor(model => model.TicketDetails.Description)</td>
+                    </tr>
+                    <tr>
+                        <th style="background:springgreen">@Html.DisplayNameFor(model => model.StatusId)</th>
+                        <td>@Html.DisplayFor(model => model.TicketDetails.Status.Description)</td>
+                    </tr>
+                    <tr>
+                        <th style="background:springgreen">@Html.DisplayNameFor(model => model.PriorityId)</th>
+                        <td>@Html.DisplayFor(model => model.TicketDetails.Priority.Description)</td>
+                    </tr>
+                    <tr>
+                        <th style="background:springgreen">@Html.DisplayNameFor(model => model.CreatedBy)</th>
+                        <td>@Html.DisplayFor(model => model.TicketDetails.CreatedBy.FullName)</td>
+                    </tr>
+                    <tr>
+                        <th style="background:springgreen">@Html.DisplayNameFor(model => model.CreatedOn)</th>
+                        <td>@Html.DisplayFor(model => model.TicketDetails.CreatedOn)</td>
+                    </tr>
+                    <tr>
+                        <th style="background:springgreen">@Html.DisplayNameFor(model => model.Attachment)</th>
+                        <td>@Html.DisplayFor(model => model.TicketDetails.Attachment)</td>
+                    </tr>
+                    <tr>
+                        <th style="background:springgreen">@Html.DisplayNameFor(model => model.SubCategoryId)</th>
+                        <td>@Html.DisplayFor(model => model.TicketDetails.SubCategory.Name)</td>
+                    </tr>
+                </table>
             </div>
 
             <div class="col-md-6">
                 <h4>Ticket Comments</h4>
-                <table class="table table-bordered table-hover table-responsive-lg">
-
-                    <thead style="background:springgreen">
-                    <tr>
-                        <th>
-                            @Html.DisplayNameFor(model => model.TicketComment.Description)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.TicketComment.CreatedOn)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.TicketComment.CreatedBy)
-                        </th>
-
-                    </tr>
+                <table class="table table-bordered table-hover">
+                    <thead style="background:mediumspringgreen">
+                        <tr>
+                            <th>@Html.DisplayNameFor(model => model.TicketComment.Description)</th>
+                            <th>@Html.DisplayNameFor(model => model.TicketComment.CreatedOn)</th>
+                            <th>@Html.DisplayNameFor(model => model.TicketComment.CreatedBy)</th>
+                        </tr>
                     </thead>
                     <tbody>
                         @foreach (var item in Model.TicketComments)
                         {
                             <tr>
-                               
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Description)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CreatedOn)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CreatedBy.FullName)
-                                </td>
+                                <td>@Html.DisplayFor(modelItem => item.Description)</td>
+                                <td>@Html.DisplayFor(modelItem => item.CreatedOn)</td>
+                                <td>@Html.DisplayFor(modelItem => item.CreatedBy.FullName)</td>
                             </tr>
-                       
                         }
                     </tbody>
-                   
                 </table>
+
+                <form asp-action="AddComment" method="post" enctype="multipart/form-data">
+                    <input type="hidden" class="hidden" asp-for="Id" />
+                    <div class="row">
+                        <label class="control-label">New Ticket Comment</label>
+                        <textarea asp-for="CommentDescription" type="text" class="form-control"></textarea>
+                    </div>
+                    <button class="btn btn-primary float-end mt-5"> Add Comment</button>
+                </form>
             </div>
         </div>
     </div>
 </div>
 
-<div>
-
+<div class="mt-3">
     <a class="btn btn-primary" asp-action="Index">Back to List</a>
 </div>
