--- a/HelpDesk/Views/Tickets/Resolve.cshtml
+++ b/HelpDesk/Views/Tickets/Resolve.cshtml
@@ -7,7 +7,7 @@
 <div class="card rounded-4">
     <div class="card-body">
         <div class="d-flex align-items-center mb-3">
-            <h6 class="mb-0">Ticket Details</h6>
+            <h6 class="mb-0">Ticket Resolutions</h6>
         </div>
         <hr />
         <div class="row">
@@ -47,6 +47,33 @@
                         <td>@Html.DisplayFor(model => model.TicketDetails.SubCategory.Name)</td>
                     </tr>
                 </table>
+
+
+                <div class="col-md-6">
+                    <h4>Ticket Resolution History</h4>
+                    <table class="table table-bordered table-hover">
+                        <thead style="background:mediumspringgreen">
+                            <tr>
+                                <th>@Html.DisplayNameFor(model => model.Resolution.Description)</th>
+                                <th>@Html.DisplayNameFor(model => model.Resolution.Status)</th>
+                                <th>@Html.DisplayNameFor(model => model.Resolution.CreatedOn)</th>
+                                <th>@Html.DisplayNameFor(model => model.Resolution.CreatedBy)</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.TicketResolutions)
+                            {
+                                <tr>
+                                    <td>@Html.DisplayFor(modelItem => item.Description)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Status.Description)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.CreatedOn)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.CreatedBy.FullName)</td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                   
+                </div>
             </div>
 
             <div class="col-md-6">
@@ -71,13 +98,17 @@
                     </tbody>
                 </table>
 
-                <form asp-action="AddComment" method="post" enctype="multipart/form-data">
+                <form asp-action="ResolvedConfirmed" method="post" enctype="multipart/form-data">
                     <input type="hidden" class="hidden" asp-for="Id" />
                     <div class="row">
-                        <label class="control-label">New Ticket Comment</label>
+                        <label class="control-label">Ticket Status </label>
+                        <select asp-for="StatusId" class="form-control" asp-items="ViewBag.StatusId"></select>
+                    </div>
+                    <div class="row">
+                        <label class="control-label">New Ticket Resolution Comment</label>
                         <textarea asp-for="CommentDescription" type="text" class="form-control"></textarea>
                     </div>
-                    <button class="btn btn-primary float-end mt-5"> Add Comment</button>
+                    <button class="btn btn-primary float-end mt-5"> Add Resolution Status</button>
                 </form>
             </div>
         </div>
