--- a/HelpDesk/Views/SystemCodeDetails/Index.cshtml
+++ b/HelpDesk/Views/SystemCodeDetails/Index.cshtml
@@ -11,7 +11,7 @@
         </div>
 
         <p>
-            <a class="btn btn-primary" asp-action="Create">Create New</a>
+            <a class="btn btn-primary" asp-action="Create">Add New System Code Detail</a>
         </p>
         <table class="table table-hover table-bordered table-striped">
             <thead>
